--- a/css/style.css
+++ b/css/style.css
@@ -167,15 +167,17 @@ hr {
  }
 
 .wrapper {
-    width: 800px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    /* background-color: aqua; */
 }
 .wrapper .card {
     background-color: transparent;
-    width: calc(23% - 20px);
+    /* width: calc(23% - 20px); */
+    width: 10px;
     /* padding: 20px; */
     /* height: 300px; */
     border-radius: 5px;
@@ -196,6 +198,10 @@ hr {
     cursor: default;
     box-shadow: 0 1px 10px #FF9100; /* bayangan lembut */
     /* border: 1px solid #FF9100;  */
+}
+.wrapper .card .circle .bar{
+/* background-color: red; */
+/* width: ; */
 }
 .card .circle .box,
 .card .circle .box span{
